Viewport dimensions causing issue on mobile.

--- a/src/components/layout/menu/Menu.module.scss
+++ b/src/components/layout/menu/Menu.module.scss
@@ -21,7 +21,7 @@
 
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   z-index: 60;
 
   color: $black;
@@ -180,7 +180,7 @@
 .MenuUpOverlay {
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
 
   background-color: transparent;
   z-index: 40;
@@ -189,7 +189,7 @@
   %MenuSection {
     position: fixed;
     width: 34vw;
-    height: 100vh;
+    height: 100%;
 
     z-index: 30;
     pointer-events: none;
